traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:11: error: missing argument list for method && in class Boolean
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `$amp$amp _` or `$amp$amp(_)` instead of `$amp$amp`.
    if (estFaceMur==false && cpt%2=0 ){
                          ^TraversalZigZag:15: error: missing argument list for method && in class Boolean
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `$amp$amp _` or `$amp$amp(_)` instead of `$amp$amp`.
    }else if (estFaceMur()==false && cpt%2=1){
                                  ^TraversalZigZag:42: error: not found: value Direction
  }else if(getDirection()==Direction.EST){
                           ^TraversalZigZag:47: error: not found: value Direction
  }else if (getDirection()==Direction.OUEST){
                            ^