traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
override def run() {
  var cpt:Int=0
  ecritMessage(cpt)
  while (positionTest()==false){
    
    var x:Int=0
    var y:Int=0
    x=getX()
    y=getY()

    droite()    
    if (estFaceMur==false && cpt%2=0 ){
      setPos(x+1,y)
      gauche()

    }else if (estFaceMur()==false && cpt%2=1){
      setPos(x-1,y)
      gauche()
    }
  
  
   

    
    
    
    cpt+=1
    ecritMessage(cpt)
    positionTest()   
    
  }
  
  
}





def serpent(){
  if(estFaceMur==false){
    avance()
  }else if(getDirection()==Direction.EST){
    gauche()
    avance()
    gauche()
    avance()
  }else if (getDirection()==Direction.OUEST){
    droite()
    avance()
    droite()
    avance()
  }
}







def positionTest():Boolean={
  if(getMondeHauteur()-1==getY() && getMondeLargeur()-1==getX()){
    return true
  }else {
    return false
  }
  
}